gcc/testsuite/algol68/compile/error-mode-stropping-12.a68
begin short int j;
      j := "joo" { dg-error "char.*short int" }
end
